Fixing an issue where the expandable regions would not expand fully on some drop-downs and the text was being truncated.

--- a/courses/style.css
+++ b/courses/style.css
@@ -177,7 +177,7 @@ input[type='checkbox'] {
 } 
 
 .toggle:checked + .lbl-toggle + .collapsible-content { 
-    max-height: 100%; 
+    max-height: 1000%; 
 } 
 
 .toggle:checked+.lbl-toggle { 
